--- a/docs/api/blockchain/challenges.mdx
+++ b/docs/api/blockchain/challenges.mdx
@@ -6,12 +6,23 @@ sidebar_label: Challenges
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/challenges
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## List Challenge receipts
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
+
+## List Challenge receipts [DEPRECATED]
 
 Lists the completed challenges by listing challenge receipts.
 
@@ -48,7 +59,7 @@ Return a page of `challenge_receipts` transactions.
 :::note Transaction Units
 
 Remember that transaction units are in `bones`. Read more
-[here](/api/blockchain/introduction/#transaction-units)
+[here](/api/blockchain/introduction/#transaction-units) [DEPRECATED]
 
 :::
 
