--- a/docs/api/blockchain/elections.mdx
+++ b/docs/api/blockchain/elections.mdx
@@ -6,12 +6,23 @@ sidebar_label: Elections
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/elections
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## List Elections
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
+
+## List Elections [DEPRECATED]
 
 Lists elections by listing `consensus group` transactions.
 
