--- a/docs/api/blockchain/stats.mdx
+++ b/docs/api/blockchain/stats.mdx
@@ -6,12 +6,23 @@ sidebar_label: Stats
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/stats
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## Blockchain Stats
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
+
+## Blockchain Stats [DEPRECATED]
 
 ```
 GET https://api.helium.io/v1/stats
@@ -98,7 +109,7 @@ _No Parameters_
 
 ---
 
-## Token Supply
+## Token Supply [DEPRECATED]
 
 ```
 GET https://api.helium.io/v1/stats/token_supply
