--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -1,11 +1,11 @@
 ---
-id: helium-token
-title: The Helium Token
-pagination_label: The Helium Token
-sidebar_label: The Helium Token
-description: The Helium Token
+id: hnt-token
+title: The Helium Network Token
+pagination_label: HNT Token
+sidebar_label: HNT Token
+description: Helium Network Token Documentation
 image: https://i.imgur.com/bWAbESE.png
-slug: /blockchain/helium-token
+slug: /helium-tokens/hnt
 ---
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
