--- a/docs/api/blockchain/assert-locations.mdx
+++ b/docs/api/blockchain/assert-locations.mdx
@@ -6,12 +6,23 @@ sidebar_label: Assert Locations
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/assert-locations
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## List Assert Locations
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
+
+## List Assert Locations [DEPRECATED]
 
 ```
 GET https://api.helium.io/v1/assert_locations
