--- a/docs/api/blockchain/introduction.mdx
+++ b/docs/api/blockchain/introduction.mdx
@@ -6,11 +6,23 @@ sidebar_label: Introduction
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/introduction
+hide_table_of_contents: true
 ---
 
-# Blockchain API
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## Endpoints
+# Blockchain API [DEPRECATED]
+
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
+
+## Endpoints [DEPRECATED]
 
 The Helium [blockchain API](https://github.com/helium/blockchain-http) serves up the blockchain from
 a database that is filled by a [blockchain node](https://github.com/helium/blockchain-etl) that
@@ -30,11 +42,11 @@ To access the helium api via script you will need to specify a valid `User-Agent
 identifying your agent, all requests made without a `User-Agent` header will result in an error
 `429 Slow down gun powder!`.
 
-## Routes
+## Routes [DEPRECATED]
 
 The API routes are grouped together in sub-pages of this page. Refer to the subpages for details.
 
-## Cursors
+## Cursors [DEPRECATED]
 
 In order to return data quickly and reduce the load on the API, a `cursor` may be returned from an
 API request. The documentation for each route will indicate whether the result is paged with a
@@ -67,7 +79,7 @@ request more data.
 
 :::
 
-## Transaction Units
+## Transaction Units [DEPRECATED]
 
 All API endpoints which return a transaction value (i.e. `fee`, `amount`, etc) are represented in
 the base unit `bones`.
