--- a/docs/api/blockchain/locations.mdx
+++ b/docs/api/blockchain/locations.mdx
@@ -6,17 +6,28 @@ sidebar_label: Locations
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/locations
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import useBaseUrl from '@docusaurus/useBaseUrl'
+
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
 
 Locations are used to associate human readable geographic informaion to an h3 location. This API
 exposes this geographic information.
 
 ---
 
-## Get Location
+## Get Location [DEPRECATED]
 
 ```
 GET https://api.helium.io/v1/locations/:location
