--- a/docs/api/blockchain/pending-transactions.mdx
+++ b/docs/api/blockchain/pending-transactions.mdx
@@ -6,12 +6,23 @@ sidebar_label: Pending Transactions
 description: Helium Documentation
 image: https://i.imgur.com/bWAbESE.png
 slug: /api/blockchain/pending-transactions
+hide_table_of_contents: true
 ---
 
 import Tabs from '@theme/Tabs'
 import TabItem from '@theme/TabItem'
+import useBaseUrl from '@docusaurus/useBaseUrl'
 
-## Pending Transaction Status
+:::warning Deprecation Incoming
+
+With the Solana Migration, these API endpoints will no longer be available.
+
+Please refer to [Oracles](/oracles) and [Oracle Data](/oracles/oracle-data) documentation for more
+information on accessing data.
+
+:::
+
+## Pending Transaction Status [DEPRECATED]
 
 ```
 GET https://api.helium.io/v1/pending_transactions/:hash
@@ -42,7 +53,7 @@ A successful pending transaction status request
 :::note Transaction Units
 
 Remember that transaction units are in `bones`. Read more
-[here](/api/blockchain/introduction/#transaction-units)
+[here](/api/blockchain/introduction/#transaction-units) [DEPRECATED]
 
 :::
 
@@ -82,7 +93,7 @@ Remember that transaction units are in `bones`. Read more
 
 ---
 
-## Submit a New Transaction
+## Submit a New Transaction [DEPRECATED]
 
 ```
 POST https://api.helium.io/v1/pending_transactions/:hash
