Edit TODO from link to prevent rendering

--- a/docs/solana/migration/hotspot-operator.mdx
+++ b/docs/solana/migration/hotspot-operator.mdx
@@ -83,8 +83,10 @@ Solana Migration Snapshot.
 When the Helium L1 blockchain halts, a "snapshot" of the state of the Network occurs. The Snapshot
 is a record of the final state of the Helium L1 blockchain.
 
-The [migration-service program](TODO: add link) will use this Snapshot to map existing rewards and
-Network state to the Solana blockchain.
+The migration-service program will use this Snapshot to map existing rewards and Network state 
+to the Solana blockchain.
+
+<!-- TODO: add link to migration-service program -->
 
 :::
 
