generic migration content moved from wallet to intro page

--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -16,9 +16,23 @@ The documentation on Solana and the upcoming Migration is under development and 
 
 :::
 
-As of
-[HIP-70, Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
+## Helium Is Moving To Solana
+
+With [the passing](https://heliumvote.com/13Y79HnMVt4Epug2rbLYivMPvrcpC2wYUNbZK5Dga3tw3VBpBjk) of
+[HIP-70: Scaling the Helium Network](https://github.com/helium/HIP/blob/main/0070-scaling-helium.md)
 Helium is moving to the Solana blockchain.
+
+:::info Why Solana?
+
+Read more about the
+[Helium Core Team Proposal](https://medium.com/helium-foundation/hip-70-helium-core-team-proposes-to-migrate-to-solana-e7ea23a042e7)
+and the process of
+[Evaluation of Layer 1 Blockchains](https://medium.com/helium-foundation/hip-70-evaluating-layer-1-blockchains-for-the-helium-network-15f81af6941c)
+on the [Helium Foundation Blog](https://heliumfoundation.medium.com/).
+
+:::
+
+---
 
 ## Major Milestones
 
@@ -39,7 +53,20 @@ Helium is moving to the Solana blockchain.
 6. Programmatic Treasury is planned to be activated in 2023 Q2, users will be able to convert
    $MOBILE and $IOT into $HNT on chain at that time.
 
+---
+
 ## Migration Guides
+
+As part of the Helium blockchain migration to Solana, there are some changes to existing Helium
+Wallets and Applications for users to be aware of.
+
+:::info Hotspot NFTs and Token Management
+
+The Helium Network move to the Solana blockchain will result in all Hotspots automatically becoming
+[Solana NFTs](https://solana.com/developers/nfts) which, along with the Helium Network Tokens (HNT,
+IOT, and MOBILE), can be viewed in the [Helium Wallet app](/wallets/helium-wallet-app).
+
+:::
 
 The following are migration guides for different users of Helium:
 
@@ -51,10 +78,12 @@ The following are migration guides for different users of Helium:
 - [LoRaWAN Network User](/solana/migration/network-user)
 - [Maker](/solana/migration/maker)
 
-## Programs
+---
 
-The code for all of these programs is open source, and available in
-[helium-program-library](https://github.com/helium/helium-program-library)
+## Helium Programs on Solana
+
+The code for all of these Programs is open source, and available in the
+[helium-program-library](https://github.com/helium/helium-program-library) repository on Github.
 
 :::info Program Audit
 
@@ -92,9 +121,11 @@ provided once complete.
 | [@helium/treasury-management-sdk](https://github.com/helium/helium-program-library/tree/master/packages/treasury-management-sdk)     | SDK to the treasury management program                                             |
 | [@helium/voter-stake-registry-sdk](https://github.com/helium/helium-program-library/tree/master/packages/voter-stake-registry-sdk)   | SDK to the voter stake registry program                                            |
 
+---
+
 ## Important Addresses and Links
 
-All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` program.
+All the tokens are on the `TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA` Program.
 
 The mint IDs are as follows:
 
